repackage test harness so its not part of standard test suite.